--- a/Source/Server/apps/mpconsole/templates/patches/patches_custom.html
+++ b/Source/Server/apps/mpconsole/templates/patches/patches_custom.html
@@ -216,7 +216,8 @@
 			 ' style="width: 98%; height: 98%; position: absolute"></iframe>';
 
 			$('#modalTitle').html("New Custom Patch");
-			$('#modalCloseButton').html('Cancel');
+			$('#modalSaveButton').hide();
+			$('#modalCancelButton').hide();
 			$('#modalBody').html(innerHTML);
 			$('#modalBody').css({'height':'770px'});
 			$('#modalDialog').addClass("modal-wide");
