--- a/Source/Server/apps/mpconsole/templates/reports/new_report.html
+++ b/Source/Server/apps/mpconsole/templates/reports/new_report.html
@@ -114,7 +114,7 @@
 
 	<div class="row">
 		<div id="alert" class="alert alert-info" style="margin: 0 auto;">
-			<strong>NOTE:</strong> Queries limied to only 10 records.
+			<strong>NOTE:</strong> Queries limited to only 10 records.
 		</div>
 		<div id="preview">
 			<table id="table" data-toolbar="#toolbar" class="table table-condensed" style="width:auto;"></table>
