--- a/Source/Server/apps/mpconsole/templates/dashboard/dashview.html
+++ b/Source/Server/apps/mpconsole/templates/dashboard/dashview.html
@@ -17,7 +17,7 @@
 
 {% block body %}
 	<div>
-		<table id="chartDataTable" data-toolbar="#chartDataToolbar" data-show-export="true" data-show-columns="true" class="table table-condensed">
+		<table id="chartDataTable" data-toolbar="#chartDataToolbar" data-show-export="true" class="table table-condensed">
 			<div id="chartDataToolbar"></div>
 		</table>
 	</div>
@@ -37,6 +37,8 @@
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/bootstrap-table.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/extensions/resizable/bootstrap-table-resizable.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='yarn_components/colresizable/colResizable-1.6.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='yarn_components/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='yarn_components/tableexport.jquery.plugin/tableExport.min.js') }}"></script>
 
 	<script>
 	$( document ).ready(function()
@@ -49,11 +51,13 @@
 			pageSize: 20,
 			pageList: [5, 10, 20, 50, 100, 200],
 			pagination: true,
-			queryParamsType: "limit",
 			pagination: true,
 			sidePagination: "client",
 			showRefresh: true,
 			idField: 'cuuid',
+            showColumns: true,
+            exportTypes: ['json', 'xml', 'csv', 'txt'],
+            exportDataType: "all",
 			columns: [
 				{% for col in columns %}
 				{
@@ -62,13 +66,7 @@
 					sortable: true
 				},
 				{% endfor %}
-			],
-			onPageChange: function(number, size) {
-				$('#chartDataTable').bootstrapTable('refresh');
-			},
-			onSort: function(name, order) {
-				$('#chartDataTable').bootstrapTable('refresh');
-			},
+			]
 		});
 	});
 
